Don't create the class

--- a/view/base/web/css/_mixins.less
+++ b/view/base/web/css/_mixins.less
@@ -1,7 +1,7 @@
 //
 // Direction
 // ______________________________________________
-.direction {
+.direction() {
     .modrtl-css(direction, @modrtl-dir);
 }
 
