--- a/view/base/web/css/_mixins.less
+++ b/view/base/web/css/_mixins.less
@@ -86,6 +86,18 @@
 }
 
 //
+// Text indent
+// ______________________________________________
+.text-indent(@distance) {
+    & when (@modrtl-dir = ltr) {
+        .modrtl-css(text-indent, @distance);
+    }
+    & when (@modrtl-dir = rtl) {
+        .modrtl-css(text-indent, -@distance);
+    }
+}
+
+//
 // Clear
 // ______________________________________________
 .clear(@direction) {
